поправил reset, index

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -32,7 +32,7 @@ body
 .sidebar__link
     height: 48px
     width: 48px
-    
+    padding-top: 5px
 @mixin SidebarMenu($heightMenu)
     display: flex
     flex-direction: column
@@ -141,6 +141,7 @@ body
     line-height: 24px
 .article__title
     margin-top: 0
+    margin-bottom: 8px
 .footer
     padding-top: 20px
     padding-bottom: 22px
@@ -151,6 +152,7 @@ body
 .footer__info
     display: flex
     flex-direction: row
+    flex-wrap: wrap
     width: calc(100% - 28px)
     margin-left: 28px
 .footer__links
