--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -166,3 +166,10 @@ body
     display: flex
     flex-direction: row
     margin-left: 32px
+.button__image
+    height: 18px
+    width: 18px
+    position: relative
+    top: 3px
+    line-height: 18px
+    padding-top: 10px
