--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -21,6 +21,7 @@ $bigFontSize: 20px
 .button
 	font-size: 14px
 	line-height: 14px
+	color: $mainColor
 @mixin Button($backColor, $font)
 	padding: 12px 20px
 	border-width: 2px
@@ -164,6 +165,12 @@ h2
 	margin-bottom: 24px
 .mb-28
 	margin-bottom: 28px
+.ml-12
+	margin-left: 12px
+.ml-28
+	margin-left: 28px
+.ml-32
+	margin-left: 32px
 //стили для 1920
 @media screen and (min-width: 1920px)
 	.button_acc:hover
