--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -17,11 +17,7 @@ $buttonHeightFor1920: 44px
 $mainFontSize: 14px
 $bigFontSize: 20px
 *
-	font-family: Montserrat
-.button
-	font-size: 14px
-	line-height: 14px
-	color: $mainColor
+	font-family: Montserrat, Helvetica, Arial, sans-serif
 @mixin Button($backColor, $font)
 	padding: 12px 20px
 	border-width: 2px
@@ -29,6 +25,10 @@ $bigFontSize: 20px
 	border-color: $backColor
 	background-color: $backColor
 	font-size: $font
+.button
+	font-size: 14px
+	line-height: 14px
+	color: $mainColor
 //стили для 1366
 .button_acc
 	@include Button($active, 14px)
@@ -60,7 +60,7 @@ $bigFontSize: 20px
 	font-size: $size
 	line-height: $lineHeight
 	text-decoration: none
-	letter-spacing: -0.02em;	
+	letter-spacing: -0.02em	
 .link, .link:visited
 	@include Link($size: 14px, $lineHeight: 18px)	
 .link:hover
@@ -106,11 +106,9 @@ h2
 .caption-S-regular
 	@include FontStyles($fontStyle: 400, $fontSize: 12px, $lineHeightInPixels: 14px, $letterSpacing: -2%)
 .body-semibold
-	font-family: Arial, Helvetica, sans-serif
 	@include FontStyles($fontStyle: 600, $fontSize: 16px, $lineHeightInPixels: 24px, $letterSpacing: none)
 	paragraph-spacing: 8px
 .body-regular
-	font-family: Arial, Helvetica, sans-serif
 	@include FontStyles($fontStyle: 400, $fontSize: 16px, $lineHeightInPixels: 24px, $letterSpacing: none)
 	paragraph-spacing: 8px
 //иконки сервисные
@@ -131,12 +129,7 @@ h2
 .plant:hover,.plant_active
 	path:nth-child(2)
 		fill: $activeIcons
-.event:hover,.event_active,.event:active
-	path:nth-child(2)
-		fill: $active
-	path:nth-child(3)
-		fill: $activeIcons
-.dollar:hover,.dollar_active,.dollar:active
+.event:hover,.event_active,.event:active,.dollar:hover,.dollar_active,.dollar:active
 	path:nth-child(2)
 		fill: $active
 	path:nth-child(3)
@@ -155,22 +148,12 @@ h2
 	path:nth-child(10)
 		fill: #FFA458
 //марджины
-.mb-12
-	margin-bottom: 12px
-.mb-16
-	margin-bottom: 16px
-.mb-20
-	margin-bottom: 20px
-.mb-24
-	margin-bottom: 24px
-.mb-28
-	margin-bottom: 28px
-.ml-12
-	margin-left: 12px
-.ml-28
-	margin-left: 28px
-.ml-32
-	margin-left: 32px
+@for $i from 4 through 15
+	.mb-#{$i*2}
+		margin-bottom: #{$i*2}px
+@for $i from 6 through 16
+	.ml-#{$i*2}
+		margin-left: #{$i*2}px
 //стили для 1920
 @media screen and (min-width: 1920px)
 	.button_acc:hover
@@ -219,10 +202,8 @@ h2
 	.caption-S-regular
 		@include FontStyles($fontStyle: 400, $fontSize: 14px, $lineHeightInPixels: 16px, $letterSpacing: -2%)
 	.body-semibold
-		font-family: Arial, Helvetica, sans-serif
 		@include FontStyles($fontStyle: 600, $fontSize: 18px, $lineHeightInPixels: 26px, $letterSpacing: none)
 		paragraph-spacing: 8px
 	.body-regular
-		font-family: Arial, Helvetica, sans-serif
 		@include FontStyles($fontStyle: 400, $fontSize: 18px, $lineHeightInPixels: 26px, $letterSpacing: none)
 		paragraph-spacing: 8px
