поправил в файле style.sass

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -49,9 +49,9 @@ $bigFontSize: 20px
 .button_sec
 	@include Button($darkgreyTwo, 14px)
 .button_sec:hover
-	@include Button(n$lightgrey, 14px)
+	@include Button($lightgrey, 14px)
 .button_sec:disable
-	@include Button( $darkgreyOne, 14px)
+	@include Button($darkgreyOne, 14px)
 .button_withicon
 	@include Button($active, 14px)
 @mixin Link($size, $lineHeight)
