поправил в файле style.sass

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -59,7 +59,7 @@ $bigFontSize: 20px
 	font-size: $size
 	line-height: $lineHeight
 	text-decoration: none
-	letter-spacing: -0.02em;	
+	letter-spacing: -0.02em
 .link, .link:visited
 	@include Link($size: 14px, $lineHeight: 18px)	
 .link:hover
